force-app/main/default/objects/DiscountLevel__c/DiscountLevel__c.object-meta.xml
<CustomObject>
    <description>Objet pour définir une remise différente en fonction du montant du devis pour une promotion.</description>
    <label>Palier de promotion</label>
    <nameField>
        <displayFormat>PP-{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paliers de promotion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>