force-app/main/default/objects/DiscountLevel__c/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <label>Promotion</label>
    <referenceTo>Discount__c</referenceTo>
    <relationshipLabel>Paliers de promotion</relationshipLabel>
    <relationshipName>DiscountLevels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>