force-app/main/default/objects/DiscountLevel__c/fields/discountAmount__c.field-meta.xml
<CustomField>
    <fullName>discountAmount__c</fullName>
    <label>Remise (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>