force-app/main/default/objects/DiscountLevel__c/fields/discountPercent__c.field-meta.xml
<CustomField>
    <fullName>discountPercent__c</fullName>
    <label>Remise (%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>