force-app/main/default/objects/DiscountLevel__c/fields/maximumAmount__c.field-meta.xml
<CustomField>
    <fullName>maximumAmount__c</fullName>
    <label>Montant maximum</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>