force-app/main/default/objects/DiscountLevel__c/fields/minimumAmount__c.field-meta.xml
<CustomField>
    <fullName>minimumAmount__c</fullName>
    <label>Montant minimum</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>