force-app/main/default/objects/DiscountLevel__c/validationRules/VR_K3_DiscountLevel_DiscountPerPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_DiscountLevel_DiscountPerPositive</fullName>
    <active>true</active>
    <description>La remise, si renseignée, doit être positive</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$User.LastName != &quot;Salesforce CPQ&quot; &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISNULL(discountPercent__c)) &amp;&amp; 
discountPercent__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>discountPercent__c</errorDisplayField>
    <errorMessage>La remise doit être positive!</errorMessage>
</ValidationRule>